--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-  <h1>Your Name</h1>
+  <h1>Daeho Lee</h1>
   <p>Research interests / short bio here.</p>
   <p>
     <a class="button" href="./CV_YourName.pdf" target="_blank" rel="noopener">View CV (PDF)</a>
