--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <h1>Daeho Lee</h1>
   <p>Research interests / short bio here.</p>
   <p>
-    <a class="button" href="./CV_YourName.pdf" target="_blank" rel="noopener">View CV (PDF)</a>
-    <a class="button" href="./CV_YourName.pdf" download>Download CV</a>
+    <a class="button" href="./cv.pdf" target="_blank" rel="noopener">View CV (PDF)</a>
+    <a class="button" href="./cv.pdf" download>Download CV</a>
   </p>
 </body>
 </html>
