--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <h1>Daeho Lee</h1>
-  <p>Research interests / short bio here.</p>
+  <p>I work at the intersection of bioinformatics and machine learning, focusing on single-cell and spatial transcriptomics. My current research develops scalable methods for integrating scRNA-seq with image-based and spatial data using anchor-based optimal transport, and benchmarks preprocessing steps such as ambient RNA removal to improve downstream analyses. I also have experience in biomedical text mining and drug-related knowledge extraction.</p>
   <p>
     <a class="button" href="./cv.pdf" target="_blank" rel="noopener">View CV (PDF)</a>
     <a class="button" href="./cv.pdf" download>Download CV</a>
